tests/regression/errors/basic/type_error_6.csd
// Type error test 6
sus number drip = 6
sus text tea = "string_6"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 6:", wrong)
